<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Shopt</string>
    <string name="shopping_list">Shopping List</string>
    <string name="edit_shops">Edit Shops</string>
    <string name="edit_items">Edit %s Items</string>
    <string name="add_item">Add Item</string>
    <string name="add_shop">Add Shop</string>
    <string name="edit_shop">Edit Shop</string>
    <string name="edit_item">Edit Item</string>
    <string name="shop_name">Shop Name</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_shop">Delete Shop</string>
    <string name="delete_shop_message">Are you sure you want to delete \"%1$s\"? This will also delete all %2$d items in this shop.</string>
    <string name="select_shop">Select Shop</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="edit_quantity">Edit Quantity</string>
    <string name="quantity_hint">e.g., 2 kg, 3 bottles, 500g, etc.</string>
    <string name="add_quantity">Add quantity</string>
    <string name="no_shops_message">No shops added yet! Tap the shop icon to add one.</string>
    <string name="no_items_in_shop">No items in this shop</string>
    <string name="no_items_yet">No items in this shop yet</string>
    <string name="on_shopping_list">On shopping list</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="added_to_shopping_list">%s added to shopping list</string>
    <string name="please_add_shop_first">Please add a shop first</string>
    <plurals name="item_count">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="shop_added">Shop added</string>
    <string name="shop_updated">Shop updated</string>
    <string name="shop_deleted">Shop deleted</string>
    <string name="shop_name_with_count">%1$s (%2$d)</string>
    <string name="shop_name_empty">Shop name cannot be empty</string>
    <string name="add_to_shop">Add to shop</string>
    <string name="about">About</string>
    <string name="preferences">Preferences</string>
    <string name="drop_ticked_to_bottom">Drop ticked items to the bottom</string>
    <string name="hide_empty_shops">Hide empty shops</string>
    <string name="no_items_on_list">No items on the shopping list</string>
    <string name="license_info">This app is free software released under the GPL.</string>
    <string name="github_link" translatable="false">https://github.com/domob1812/shopt2</string>
    <string name="export_data">Export data</string>
    <string name="export_method">Export method</string>
    <string name="save_to_file">Save to file</string>
    <string name="share">Share</string>
    <string name="export_successful">Data exported successfully</string>
    <string name="export_failed">Export failed</string>
    <string name="import_data">Import data</string>
    <string name="import_confirm_title">Replace all data?</string>
    <string name="import_confirm_message">Replace all existing data with imported data? This cannot be undone.</string>
    <string name="replace">Replace</string>
    <string name="import_successful">Data imported successfully</string>
    <string name="import_failed">This doesn\'t appear to be a valid Shopt backup file</string>
    <string name="theme">Theme</string>
    <string name="theme_system">Follow system</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="already_on_shopping_list">%s is already on the shopping list</string>
    <string name="all_items_unchecked">All items unchecked</string>
    <string name="checked_items_cleared">Checked items cleared</string>
    <string name="item_added">Item added</string>
    <string name="item_name_empty">Item name cannot be empty</string>
    <string name="no_items_selected">No items selected</string>
    <string name="delete_items">Delete Items</string>
    <string name="version_unknown">Unknown</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="clear_checked">Clear checked</string>
    <string name="cd_uncheck_all_items">Uncheck all items</string>
    <string name="cd_clear_checked_items">Clear checked items</string>
    <string name="cd_edit_shops">Edit shops</string>
    <string name="cd_add_to_shopping_list">Add to shopping list</string>
    <string name="cd_delete_checked_items">Delete checked items</string>
    <string name="cd_select_item">Select item</string>
    <string name="cd_edit_item">Edit item</string>
    <string name="cd_collapse_indicator">Collapse indicator</string>
    <string name="cd_uncheck_all_items_in_shop">Uncheck all items in shop</string>
    <string name="cd_edit_items">Edit items</string>
    <string name="cd_drag_handle">Drag handle</string>
    <string name="cd_edit_shop">Edit shop</string>
    <string name="cd_delete_shop">Delete shop</string>
    <plurals name="items_added_to_shopping_list">
        <item quantity="one">%d item added to shopping list</item>
        <item quantity="other">%d items added to shopping list</item>
    </plurals>
    <plurals name="delete_items_confirm">
        <item quantity="one">Delete %d item?</item>
        <item quantity="other">Delete %d items?</item>
    </plurals>
    <plurals name="items_deleted">
        <item quantity="one">%d item deleted</item>
        <item quantity="other">%d items deleted</item>
    </plurals>
    <string name="demo_shop_grocery">Grocery Store</string>
    <string name="demo_shop_hardware">Hardware Store</string>
    <string name="demo_item_milk">Milk</string>
    <string name="demo_item_bread">Bread</string>
    <string name="demo_item_eggs">Eggs</string>
    <string name="demo_item_apples">Apples</string>
    <string name="demo_item_nails">Nails</string>
    <string name="demo_item_hammer">Hammer</string>
    <string name="demo_item_cookies">Cookies</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="share_shopping_list">Share shopping list</string>
    <string name="copy_or_move">Copy or move</string>
    <string name="copy">Copy</string>
    <string name="target_shop">Target shop</string>
    <string name="apply">Apply</string>
    <string name="no_target_shop">No target shop available</string>
    <plurals name="items_moved">
        <item quantity="one">%d item moved</item>
        <item quantity="other">%d items moved</item>
    </plurals>
    <plurals name="items_copied">
        <item quantity="one">%d item copied</item>
        <item quantity="other">%d items copied</item>
    </plurals>
</resources>
