<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_uncheck_all"
        android:title="@string/uncheck_all"
        android:icon="@drawable/ic_undo"
        app:showAsAction="always"
        android:contentDescription="@string/cd_uncheck_all_items" />

    <item
        android:id="@+id/action_clear_checked"
        android:title="@string/clear_checked"
        android:icon="@drawable/ic_delete_sweep"
        app:showAsAction="always"
        android:contentDescription="@string/cd_clear_checked_items" />

    <item
        android:id="@+id/action_edit_shops"
        android:title="@string/edit_shops"
        android:icon="@drawable/ic_store"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/cd_edit_shops" />

    <item
        android:id="@+id/action_export"
        android:title="@string/export_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_preferences"
        android:title="@string/preferences"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>